<resources>
    <string name="app_name">SocialMediaApp</string>
    <string name="Login">Login</string>
    <string name="SignUp">SignUp</string>
    <string name="Email_Address">Email Address</string>
    <string name="Password">Password</string>
    <string name="Submit">Submit</string>
    <string name="Dont_have_Account">Dont have an account? Sign up now!</string>
    <string name="Have_Account">Have Account?</string>
    <string name="FullName">Full Name</string>
    <string name="UserName">UserName</string>
    <string name="Signout">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>