<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center"
        android:padding="25dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"
            android:padding="30dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/Login" />

        <EditText
            android:id="@+id/Login_EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email_Address"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textColorHint="@color/lightGray"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/Login_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/lightGray"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_shape"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/Submit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_Signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:clickable="true"
                android:textSize="14sp"
                android:textColor="@color/colorAccent"
                android:text="@string/Dont_have_Account" />

        <TextView
            android:id="@+id/textview_Signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/SignUp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>